--- a/README
+++ b/README
@@ -16,4 +16,4 @@ Backend do analizy kodu i zwracania korelacji Tomasz Jażdżewski technologia .N
 
 UnitTesty Aleksander Gryga i Aleksandra Knauber technologia MSTest .netCore 
 
-Wykonanie diagramów  Maciej Kubeł technologia Visual Paradigm
+Wykonanie diagramów  Maciej Kubeł technologia Visual Paradigm \ Administracja Trello
